--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Take the coin</title>
+
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.14.0/dist/phaser.min.js"></script>
+
 </head>
 <body>
     
@@ -11,8 +14,8 @@
 
     </div>
 
+
     <!-- calling the game code -->
-    <script src="phaser.min.js"></script>
     <script src="game.js"></script>
 
 </body>
